Исправляет swagger-описания ошибок и перегенерирует документацию по видео
