# internal/handler/complete_video_upload.go
@@ -22,11 +22,11 @@ import (
 // @Param videoId path string true "ID видео"
 // @Success 200 {object} dto.CompleteVideoUploadResponse
 // @Failure 400 {object} dto.ErrorMessage
-// @Failure 401 {object} dto.ErrorMessage
+// @Failure 401
 // @Failure 403 {object} dto.ErrorMessage
 // @Failure 404 {object} dto.ErrorMessage
 // @Failure 409 {object} dto.ErrorMessage
-// @Failure 500 {object} dto.ErrorMessage
+// @Failure 500
 // @Router /api/v1/accounts/{accountId}/user-groups/{groupId}/video/{videoId}/complete [post]
 func (h *Handler) CompleteVideoUpload(c *gin.Context) {
 	accountID, err := h.GetPathUUIDValue(c, pathKeyAccountID)
