# internal/handler/rename_video.go
@@ -22,9 +22,10 @@ import (
 // @Param request body dto.RenameVideoRequest true "Тело запроса"
 // @Success 200 {object} dto.RenameVideoResponse
 // @Failure 400 {object} dto.ErrorMessage
+// @Failure 401
 // @Failure 403 {object} dto.ErrorMessage
 // @Failure 404 {object} dto.ErrorMessage
-// @Failure 500 {object} dto.ErrorMessage
+// @Failure 500
 // @Router /api/v1/accounts/{accountId}/user-groups/{userGroupId}/video/{videoId} [put]
 func (h *Handler) RenameVideo(c *gin.Context) {
 	accountID, err := h.GetPathUUIDValue(c, pathKeyAccountID)
